# pywc

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
pywc/: main.py
tests/: test_script.py
