[tool.poetry]
name = "pywc"
version = "1.0.0"
description = "Custom python wc implementation"
authors = ["Alexandru Prodan <prodanalexandru1999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-console-scripts="^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
